# clcaffe_tracker

./: CMakeLists.txt  yolo_detect.cpp
